@@ -721,6 +721,9 @@
 			RelativePath="..\..\Python\pyarena.c">
 		</File>
 		<File
+			RelativePath="..\..\Python\pyctype.c">
+		</File>
+		<File
 			RelativePath="..\..\Python\pyfpe.c">
 		</File>
 		<File
